# Complete-Guide-to-MCP-in-Python

./: .gitignore  README.md  pyproject.toml  requirements.txt
01 Introduction/: introduction.html  introduction.ipynb
02 MCP Architecture Overview/: MCP Architecture.html  MCP Architecture.ipynb
03 Creating and Connecting MCP Server/: README.md  main.py  pyproject.toml  steps to connect the mcp.txt  weather.py
04 Connect MCP Client to an MCP Server/: README.md  client.py  client_npx.py  main.py  pyproject.toml  weather.py
05 MCP Server Deep Dive - Tools/: README.md  complex_input_mcp.py  crypto.py  local.py  log.txt  main.py  notes.txt  pyproject.toml  screenshot.py  web.html  websearch_perpexity_model.py
06 MCP Server Resourese and Prompts/: README.md  prompt.py  pyproject.toml  resources.py
07 MCP Server Deployment and Publishing/: README.md  main.py  pyproject.toml
07 MCP Server Deployment and Publishing/src/07_mcp_server_deployment_and_publishing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
07 MCP Server Deployment and Publishing/src/mcpserver/: __main__.py  deployment.py
08 MCP Server stdio and Streamable https/: README.md  main.py  pyproject.toml  server.py
09 MCP Client Deep Dive/: README.md  client.py  client_query.py  server.py
10 End-To-End Project/: README.md  main.py  pyproject.toml
10 End-To-End Project/Chess Stats/: README.md  main.py  pyproject.toml
10 End-To-End Project/Memory Tracker/: README.md  church_route_mapper.py  (+1 more)
11 Build MCP Client with Multi MCP Server/: README.md  chat_ui.py  client.py  main.py  pyproject.toml
(+8 files in other folders)
